--- a/style_solucoes.css
+++ b/style_solucoes.css
@@ -134,3 +134,12 @@ body{
     padding-left: 37%;
     font-size: 35px;
 }
+.footer{
+
+}
+.texto{
+    font-size:20px;
+    font-family: cursive;
+    
+}
+    
